feat: Added avaibility model etc. and GetAvaibilities endpoint
