# app/Models/Availability.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Models;
+
+use App\Filters\AvailabilityFilters;
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+#[Fillable(['starts_at', 'ends_at', 'slot_duration'])]
+class Availability extends Model
+{
+    /** @use HasFactory<\Database\Factories\AvailabilityFactory> */
+    use HasFactory;
+
+    public function doctor(): BelongsTo
+    {
+        return $this->belongsTo(Doctor::class);
+    }
+
+    // This is the scope we added TODO types
+    public function scopeFilter(Builder $query, AvailabilityFilters $filters)
+    {
+        return $filters->apply($query);
+    }
+}
