# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Actions\Availabilities\GetAvailabilitiesAction;
 use App\Http\Actions\Doctors\DeleteDoctorAction;
 use App\Http\Actions\Doctors\GetDoctorAction;
 use App\Http\Actions\Doctors\GetDoctorsAction;
@@ -10,6 +11,8 @@ use App\Http\Actions\Patients\GetPatientAction;
 use App\Http\Actions\Patients\GetPatientsAction;
 use App\Http\Actions\Patients\StorePatientAction;
 use App\Http\Actions\Patients\UpdatePatientAction;
+use App\Http\Resources\AvailabilityResource;
+use App\Models\Availability;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -32,3 +35,6 @@ Route::get('/patients/{patient}', GetPatientAction::class);
 Route::post('/patients', StorePatientAction::class);
 Route::patch('/patients/{patient}', UpdatePatientAction::class);
 Route::delete('/patients/{patient}', DeletePatientAction::class);
+
+// Availability
+Route::get('/availabilities', GetAvailabilitiesAction::class);
